<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbar_brown">

    <LinearLayout
        android:id="@+id/step_fragment_ingredient_ll"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/accent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/step_ingredient_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/step_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_fragment_ingredient_ll">
    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>