...
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/step_details_previous_button"
            style="@style/button_style"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/step_detail_previous"/>

        <Button
            android:id="@+id/step_details_next_button"
            style="@style/button_style"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/step_detail_next"/>
...
